--- a/Front-End/src/components/form/components/css/input.css
+++ b/Front-End/src/components/form/components/css/input.css
@@ -1,59 +1,22 @@
-.button-56 {
-  align-items: center;
-  background-color: #d13e2b;
-  border: 2px solid #111;
-  border-radius: 8px;
-  box-sizing: border-box;
-  color: #ffffff;
-  cursor: pointer;
-  display: flex;
-  font-family: Inter,sans-serif;
-  font-size: 16px;
-  font-weight: 700;
-  height: 48px;
-  justify-content: center;
-  line-height: 24px;
-  width: fit-content;
-  max-width: 100%;
-  padding: 0 25px;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
+.form-group{
+  margin-bottom: 1rem;
+  color: #1e1c2a;
+  
 }
 
-.button-56:after {
-  background-color: #111;
-  border-radius: 8px;
-  content: "";
+.form-control{
   display: block;
-  height: 48px;
-  left: 0;
   width: 100%;
-  position: absolute;
-  top: -2px;
-  transform: translate(8px, 8px);
-  transition: transform .2s ease-out;
-  z-index: -1;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #ffffff;
+  background-color: #1e1c2a;
+  background-clip: padding-box;
+  border: 1px solid #ffffff;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
-
-.button-56:hover:after {
-  transform: translate(0, 0);
-}
-
-.button-56:active {
-  background-color: #ffdeda;
-  outline: 0;
-}
-
-.button-56:hover {
-  outline: 0;
-}
-
-@media (min-width: 768px) {
-  .button-56 {
-    padding: 0 40px;
-  }
-}
+webkit-scrollbar { display: none; }
